<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="about">"About"</string>
  <string name="activate">"Activate"</string>
  <string name="app_name">"GIF Live Wallpaper"</string>
  <string name="back">"Back"</string>
  <string name="battery_saver">"Battery Saver"</string>
  <string name="change_color">"Change color"</string>
  <string name="change_scale">"Change scale"</string>
  <string name="clear_gif">"Clear GIF"</string>
  <string name="click_the_open_gif_button">"Click the \"Open GIF\" button."</string>
  <string name="close">"Close"</string>
  <string name="error_wallpaper_chooser">"Couldn't launch wallpaper chooser. You can still activate
        the GIF Live Wallpaper by choosing 'Live Wallpapers'
        in your home screen wallpaper picker."</string>
  <string name="loading">"Loading…"</string>
  <string name="open_app">"Open the GIF Live Wallpaper app and setup your favorite GIF to get started."</string>
  <string name="open_gif">"Open GIF"</string>
  <string name="pause_blayback_battery_saver">"Pause GIF when Battery Saver is enabled."</string>
  <string name="pause_playback_running_hot">"Pause GIF when the phone is running hot."</string>
  <string name="pick_a_color">"Pick a color"</string>
  <string name="privacy">"Privacy"</string>
  <string name="rotate">"Rotate"</string>
  <string name="settings">"Settings"</string>
  <string name="thermal_throttle">"Thermal Mitigation"</string>
  <string name="loop_gif">"Loop playback"</string>
  <string name="inifinitely_loop_gif">"Repeat GIF infinitely"</string>
</resources>